# cpp-docker-env-example

./: CMakeLists.txt  Dockerfile  Makefile  README.md
src/: main.cpp
